# p2p-videochat

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  ConnectionDialog.cpp  ConnectionDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessagingProcessor.cpp  MessagingProcessor.h  UdpSocketHandler.cpp  UdpSocketHandler.h
